--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<div class="features_row">
 	<img src="https://preview.colorlib.com/theme/karma/img/features/f-icon3.png">
 		</div>
-		<br>24/7 Support<br><p>Free Shipping on all order</p>
+		<br>24/7 Support<br><p>Free Shipping on  order</p>
 		
 	</div>
 	<div class="features_inner4">
