--- a/collection.html
+++ b/collection.html
@@ -13,7 +13,7 @@
 <body>
 <div class="topnav">
 <img class="logo" src="logo1.png" width="150px" height="100px" style="padding-left:0px;margin-left:50px;">
-		<a href="#about">Contact</a>
+		<a href="contact1.html">Contact</a>
 		<a href="shoes.html">Shoes</a>
 		<a href="collection.html">Collection</a>
 		<a href="index.html">Home</a>
@@ -53,3 +53,46 @@
     	</div>
     </div>
 	<button class="seemore_bt">See More</button>
+	
+	    <div class="section_footer">
+    	<div class="container">
+    		<div class="mail_section">
+    			<div class="row">
+    				<div class="col-sm-6 col-lg-2">
+    					<div><a href="#"><img class="logo" src="logo1.png" width="150px" height="100px"></a></div>
+    				</div>
+    				<div class="col-sm-6 col-lg-2">
+    					<div class="footer-logo" style="margin-left:50px;"><img src="images/phone-icon.png"><span class="map_text">(71) 1234567890</span></div>
+    				</div>
+    				<div class="col-sm-6 col-lg-3">
+    					<div class="footer-logo"><img src="images/email-icon.png"><span class="map_text">Demo@gmail.com</span></div>
+    				</div>
+    				<div class="col-sm-6 col-lg-3">
+    					<div class="social_icon">
+    						<ul>
+    							<li><a href="#"><img src="images/fb-icon.png"></a></li>
+    							<li><a href="#"><img src="images/twitter-icon.png"></a></li>
+    							<li><a href="#"><img src="images/in-icon.png"></a></li>
+    							<li><a href="#"><img src="images/google-icon.png"></a></li>
+    						</ul>
+    					</div>
+    				</div>
+    				<div class="col-sm-2"></div>
+    			</div>
+    	    </div> 
+    	    <div class="footer_section_2" style="margin-left:50px;">
+		        <div class="row">
+    		        <div class="col-sm-4 col-lg-2">
+    		        	<p class="dummy_text"> ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur  ipsum dolor sit amet,</p>
+    		        </div>
+    		        <div class="col-sm-4 col-lg-2">
+    		        	<h2 class="shop_text">Address </h2>
+    		        	<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">confederation college, ontario, canada</span></div>
+    		        </div>
+    		       
+    			</div>
+    	        </div> 
+	        </div>
+    	</div>
+</body>
+</html>
